# ProjectTaKadu

./: .gitignore  README.md  Result 2.xlsx  TECHNICAL_DETAILS.md  client_ftp.py  config.ini  dw_micromedido.py  main.py  pyproject.toml  requirements.txt  script.sql
data/: sensors.csv  sensors_remov.csv
scripts/: runTakadu.ps1  uploadWavin.bat  uploadWavin.sh  uploadWavinMicromedido.bat  uploadWavinMicromedido.sh
sql/: script_consulta_telelog.sql
