[tool.poetry]
name = "takadu"
version = "0.1.0"
description = ""
authors = ["Jeferson Machado <jeferson.machado@aguasdejoinville.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
rocketry = "^2.5.1"
pandas = "^1.5.3"
psycopg2 = "^2.9.5"
redmail = "^0.5.0"
openpyxl = "^3.1.0"
paramiko = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
